--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -8,6 +8,7 @@
     tools:context=".Controllers.TelaLogin"
     android:background="@drawable/background_gradiente_theme">
     <RelativeLayout
+        android:id="@+id/ContainerLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/container_de_itens"
@@ -32,7 +33,7 @@
             android:textAllCaps="true"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:textAlignment="center"
+            android:gravity="center_horizontal"
             android:paddingTop="20dp"
             />
         <EditText
@@ -46,6 +47,7 @@
             android:padding="15dp"
             android:layout_marginTop="26dp"
             android:layout_marginHorizontal="27dp"
+            android:drawableRight="@drawable/email"
             />
         <EditText
             android:id="@+id/pegarSenha"
@@ -54,10 +56,11 @@
             android:layout_below="@id/pegarEmail"
             android:background="@drawable/backgroud_edit_text"
             android:hint="Senha"
-            android:inputType="textEmailAddress"
+            android:inputType="textPassword"
             android:padding="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginHorizontal="27dp"
+            android:drawableRight="@drawable/senha"
             />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnEntrar"
@@ -91,4 +94,15 @@
             android:layout_marginBottom="25dp"
             />
     </RelativeLayout>
+    <ProgressBar
+        android:id="@+id/Progressbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ContainerLogin"
+        android:layout_marginTop="15dp"
+        android:visibility="gone"
+        android:padding="10dp"
+        android:layout_marginHorizontal="27dp"
+        android:layout_centerHorizontal="true"
+        />
 </RelativeLayout>
