--- a/app/src/main/res/layout/activity_tela_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_form_cadastro.xml
@@ -1,10 +1,106 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.TelaFormCadastro">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".Controllers.TelaFormCadastro"
+    android:background="@drawable/background_gradiente_theme">
+        <RelativeLayout
+            android:id="@+id/containerFormCadastro"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/container_de_itens"
+            android:layout_centerInParent="true"
+            android:layout_marginHorizontal="30dp"
+            android:alpha="0.7">
+                <TextView
+                    android:id="@+id/textoCadastrese"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|center_horizontal"
+                    android:padding="13dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginHorizontal="27dp"
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/white"
+                    android:text="Cadastre-se"
+                    android:textStyle="bold"
+                    android:textSize="25dp"
+                    />
+                <TextView
+                    android:id="@+id/textoInserir"
+                    android:layout_below="@id/textoCadastrese"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center|center_horizontal"
+                    android:padding="13dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginHorizontal="27dp"
+                    android:layout_marginTop="15dp"
+                    android:textColor="@color/white"
+                    android:text="@string/Cadastro"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    />
+                <EditText
+                    android:id="@+id/pegarNomeCadastro"
+                    android:layout_below="@id/textoInserir"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="27dp"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/backgroud_edit_text"
+                    android:padding="15dp"
+                    android:layout_centerHorizontal="true"
+                    android:hint="Nome"
+                    />
+                <EditText
+                    android:id="@+id/pegarEmailCadastro"
+                    android:layout_below="@id/pegarNomeCadastro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="27dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/backgroud_edit_text"
+                    android:padding="15dp"
+                    android:layout_centerHorizontal="true"
+                    android:drawableRight="@drawable/email"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
+                    />
+                <EditText
+                    android:id="@+id/pegarSenhaCadastro"
+                    android:layout_below="@id/pegarEmailCadastro"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="27dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/backgroud_edit_text"
+                    android:padding="15dp"
+                    android:drawableRight="@drawable/senha"
+                    android:layout_centerHorizontal="true"
+                    android:hint="Senha"
+                    android:inputType="textPassword"
+                    android:layout_marginBottom="40dp"
+                    />
+        </RelativeLayout>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btnCadstrarForm"
+        android:layout_below="@+id/containerFormCadastro"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/background_btn"
+        android:alpha="0.7"
+        android:padding="10dp"
+        android:layout_marginHorizontal="90dp"
+        android:layout_centerHorizontal="true"
+        android:text="Cadastrar"
+        android:textColor="@color/white"
+        android:textAllCaps="true"
+        android:textStyle="bold"
+        android:gravity="center|center_horizontal"
+        />
+</RelativeLayout>
