--- a/app/src/main/res/layout/activity_tela_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_form_cadastro.xml
@@ -15,7 +15,7 @@
             android:layout_centerInParent="true"
             android:layout_marginHorizontal="30dp"
             android:alpha="0.7">
-                <TextView
+                <ImageView
                     android:id="@+id/textoCadastrese"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -24,10 +24,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginHorizontal="27dp"
                     android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:text="Cadastre-se"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
+                    android:src="@drawable/useradd"
                     />
                 <TextView
                     android:id="@+id/textoInserir"
@@ -55,6 +52,7 @@
                     android:padding="15dp"
                     android:layout_centerHorizontal="true"
                     android:hint="Nome"
+                    android:drawableRight="@drawable/usuerinput"
                     />
                 <EditText
                     android:id="@+id/pegarEmailCadastro"
