Atualizações: Ajuste visual tela login

--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -33,7 +33,7 @@
             android:textAllCaps="true"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:gravity="center_horizontal"
+            android:gravity="center|center_horizontal"
             android:paddingTop="20dp"
             />
         <EditText
