--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -104,6 +104,7 @@
         android:layout_marginTop="15dp"
         android:visibility="gone"
         android:padding="10dp"
+        android:indeterminateTint="@color/white"
         android:layout_marginHorizontal="27dp"
         android:layout_centerHorizontal="true"
         />
