--- a/app/src/main/res/layout/activity_tela_principal.xml
+++ b/app/src/main/res/layout/activity_tela_principal.xml
@@ -1,10 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.TelaPrincipal">
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".Controllers.TelaPrincipal"
+    android:background="@drawable/background_gradiente_theme">
+        <ImageView
+            android:id="@+id/ViewUsuario"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:background="@drawable/container_usuario"
+            android:padding="10dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="70dp"
+            android:src="@drawable/user"
+            />
+        <ImageView
+            android:id="@+id/iconUsuario"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/ViewUsuario"
+            android:layout_marginTop="40dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/user"/>
+        <TextView
+            android:id="@+id/textexibirUsuario"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ususds"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            android:layout_marginEnd="20dp"
+            android:layout_toRightOf="@id/iconUsuario"
+            android:layout_alignTop="@id/iconUsuario"
+            android:layout_alignBottom="@id/iconUsuario"
+            android:layout_marginStart="20dp"
+            android:singleLine="true"
+            android:ellipsize="end"
+            />
+        <ImageView
+            android:id="@+id/iconEmail"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_below="@id/iconUsuario"
+            android:layout_alignStart="@id/iconUsuario"
+            android:src="@drawable/email"
+            android:layout_marginTop="25dp"
+            />
+        <TextView
+            android:id="@+id/textExibirEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ususds"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
+            android:layout_below="@id/textexibirUsuario"
+            android:layout_toRightOf="@id/iconEmail"
+            android:layout_alignTop="@id/iconEmail"
+            android:layout_alignBottom="@id/iconEmail"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:singleLine="true"
+            android:ellipsize="end"
+            />
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnDeslogar"
+            android:layout_below="@id/textExibirEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_centerHorizontal="true"
+            android:text="@string/Deslogar"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:alpha="0.7"
+            android:padding="18dp"
+            android:textAllCaps="true"
+            android:layout_marginHorizontal="60dp"
+            android:gravity="center|center_horizontal"
+            android:background="@drawable/background_btn"
+            />
+</RelativeLayout>
