Desenvolvimento: Finalizando Todos os Layouts Visuais da Aplicação (#4)
* Atuaizações: algumns desenhaveis de fundo da aplicação

* Atuaizações: Construção inicial da tela Login parte visual

* Atuaizações: Construção inicial da tela Login parte logica

* Atuaizações: Interface Base de métodos principais para serem aplicadas na aplicação

* Atuaizações: Ajuste de Repositorio

* Atuaizações: criação de un icone para o login

* Atuaizações: ajuste de strings.xml

* Atuaizações: Fundo de Botões

* Atuaizações: Ajuste Btn

* Atualizações: Fundo da Edit Text

* Atualizações: Tela Login Parte Visual Pronta

* Atualizações: icones de email e senha

* Atualizações: Direcionador de Layouts

* Atualizações: Tela Login parte visual finalizada

* Atualizações: Ajustes de repositorio

* Atualizações: Construção Inicial Da tela form Cadastro

* Atualizações: Construção Inicial Da tela form Cadastro parte Logica

* Atualizações: Finalizando parte visual form cadastro

* Atualizações: Construção inicial tela principal parte visual

* Atualizações: Construção inicial tela principal parte logica

* Atualizações: Ajuste visual da tela form

* Atualizações: Ajuste visual tela login

* Atualizações: Ajuste visual tela login..

* Atualizações: Ajuste visual tela form cadastro..

* Atualizações: Adiçao de String

* Atualizações: Ajuste final Tela login

* Atualizações: Finalzando Tela Principal Parte visual

--- a/app/src/main/res/layout/activity_tela_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_form_cadastro.xml
@@ -15,7 +15,7 @@
             android:layout_centerInParent="true"
             android:layout_marginHorizontal="30dp"
             android:alpha="0.7">
-                <TextView
+                <ImageView
                     android:id="@+id/textoCadastrese"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -24,10 +24,7 @@
                     android:layout_centerHorizontal="true"
                     android:layout_marginHorizontal="27dp"
                     android:layout_marginTop="20dp"
-                    android:textColor="@color/white"
-                    android:text="Cadastre-se"
-                    android:textStyle="bold"
-                    android:textSize="25dp"
+                    android:src="@drawable/useradd"
                     />
                 <TextView
                     android:id="@+id/textoInserir"
@@ -55,6 +52,8 @@
                     android:padding="15dp"
                     android:layout_centerHorizontal="true"
                     android:hint="Nome"
+                    android:drawableRight="@drawable/usuerinput"
+                    android:singleLine="true"
                     />
                 <EditText
                     android:id="@+id/pegarEmailCadastro"
@@ -69,6 +68,7 @@
                     android:drawableRight="@drawable/email"
                     android:hint="Email"
                     android:inputType="textEmailAddress"
+                    android:singleLine="true"
                     />
                 <EditText
                     android:id="@+id/pegarSenhaCadastro"
@@ -84,6 +84,7 @@
                     android:hint="Senha"
                     android:inputType="textPassword"
                     android:layout_marginBottom="40dp"
+                    android:singleLine="true"
                     />
         </RelativeLayout>
     <androidx.appcompat.widget.AppCompatButton
