--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -33,7 +33,7 @@
             android:textAllCaps="true"
             android:textSize="15dp"
             android:textColor="@color/white"
-            android:gravity="center_horizontal"
+            android:gravity="center|center_horizontal"
             android:paddingTop="20dp"
             />
         <EditText
@@ -48,6 +48,7 @@
             android:layout_marginTop="26dp"
             android:layout_marginHorizontal="27dp"
             android:drawableRight="@drawable/email"
+            android:singleLine="true"
             />
         <EditText
             android:id="@+id/pegarSenha"
@@ -61,6 +62,7 @@
             android:layout_marginTop="10dp"
             android:layout_marginHorizontal="27dp"
             android:drawableRight="@drawable/senha"
+            android:singleLine="true"
             />
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btnEntrar"
@@ -102,6 +104,7 @@
         android:layout_marginTop="15dp"
         android:visibility="gone"
         android:padding="10dp"
+        android:indeterminateTint="@color/white"
         android:layout_marginHorizontal="27dp"
         android:layout_centerHorizontal="true"
         />
