--- a/app/src/main/res/layout/activity_tela_form_cadastro.xml
+++ b/app/src/main/res/layout/activity_tela_form_cadastro.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.TelaFormCadastro"
+    tools:context=".Services.TelaFormCadastro.TelaFormCadastroImplementacao"
     android:background="@drawable/background_gradiente_theme">
         <RelativeLayout
             android:id="@+id/containerFormCadastro"
