--- a/app/src/main/res/layout/activity_tela_login.xml
+++ b/app/src/main/res/layout/activity_tela_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Controllers.TelaLogin"
+    tools:context=".Services.TelaLogin.TelaLoginImplementacao"
     android:background="@drawable/background_gradiente_theme">
     <RelativeLayout
         android:id="@+id/ContainerLogin"
